--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -93,45 +93,6 @@
 
         <section id="hero" data-aos="fade-up">
             <div class="heroContent" style="margin-top: 80px">
-                <!-- <p class="smallCaps" style="color: #ffffff">Hi, i am munaf</p> -->
-
-                <!-- <div class="content smallCaps">
-                    <div class="content__container">
-                        <p
-                            class="content__container__text smallCaps"
-                            style="color: #ffffff"
-                        >
-                            Hello
-                        </p>
-
-                        <ul
-                            class="content__container__list"
-                            style="color: #ffffff"
-                        >
-                            <li
-                                class="content__container__list__item smallCaps"
-                            >
-                                world !
-                            </li>
-                            <li
-                                class="content__container__list__item smallCaps"
-                            >
-                                bob !
-                            </li>
-                            <li
-                                class="content__container__list__item smallCaps"
-                            >
-                                users !
-                            </li>
-                            <li
-                                class="content__container__list__item smallCaps"
-                            >
-                                everybody !
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
-
                 <div class="console-container" style="margin-bottom: 24px">
                     <span class="smallCaps" id="intro1" style="display: none"
                         >Hi, I am</span
@@ -145,8 +106,7 @@
 
                 <p class="mainHeadingText">
                     I build custom product applications <br />
-                    and websites for startups and small <br />
-                    businesses that rock!
+                    and websites for startups that rock!
                 </p>
                 <div
                     class="heroBtns"
@@ -157,8 +117,8 @@
                     style="margin-top: 40px"
                 >
                     <!-- <a id="downloadProjectBtn" href="#contact">Get in Touch</a> -->
-                    <a id="downloadProjectBtn" href="Resume.pdf" target="_blank"
-                        >Resume</a
+                    <a id="downloadProjectBtn" href="#contact" target="_blank"
+                        >Get in Touch</a
                     >
                     <a id="getInContactBtn" href="#myProjects"
                         >View Projects
@@ -177,11 +137,9 @@
             <div class="myGoalContent" data-aos="fade-left">
                 <p class="smallCaps">My goal</p>
                 <p class="bodyText">
-                    I create websites, webapps and mobile apps that helps users
-                    solve their problems efficiently and effectively. The main
-                    goal is always to prioritize the user and secondary help my
-                    clients grow their revenue and get the best possible
-                    product!
+                    My main goal is to always prioritize the client's needs,
+                    requirments and goals to help them grow their revenue to the
+                    highest potential!
                 </p>
             </div>
         </section>
@@ -394,7 +352,7 @@
                 <p class="smallCaps">About</p>
                 <p class="bodyText">
                     I'm a UI/UX Designer and Developer based in Islamabad,
-                    Pakistan. I love solving problems by simplying complex
+                    Pakistan. I love solving problems by simplifying complex
                     problems and combining insightful reserach with intutive
                     design.
                     <!-- I enjoy every stage of creating digital products
