--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -94,7 +94,8 @@
         <section id="servicesHeading" data-aos="fade-up">
             <p class="smallCaps" style="color: #ffffff">projects</p>
             <p class="mainHeadingText">
-                Aliquam sit amet augue vel neque tincidunt lobortis a id purus.
+                Everything from mobile apps, web apps, websites, or landing
+                pages. I've done it!
             </p>
         </section>
 
