--- a/mmunaf/services.html
+++ b/mmunaf/services.html
@@ -94,8 +94,8 @@
         <section id="servicesHeading" data-aos="fade-up">
             <p class="smallCaps" style="color: #ffffff">Services</p>
             <p class="mainHeadingText">
-                I create digital products & services that <br />
-                WoW, engage and delight.
+                I create digital products & services that WoW, engage and
+                delight.
             </p>
         </section>
 
@@ -117,7 +117,6 @@
                     <p class="serviceDetailsList">
                         - Market Research <br />
                         - Competitive Analysis <br />
-                        - Prototyping <br />
                         - Information Architecture
                     </p>
                 </div>
@@ -160,10 +159,10 @@
                         maintainable code.
                     </p>
                     <p class="serviceDetailsList">
-                        - Landing Pages Development <br />
-                        - Front-end Development <br />
-                        - HTML, CSS, JS<br />
-                        - React JS
+                        - Flutter, React JS, Node JS <br />
+                        - Landing Pages / Websites <br />
+                        - Web Apps <br />
+                        - Mobile Apps
                     </p>
                 </div>
             </div>
