--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -12,7 +12,11 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="styles.css" />
 
-        <title>Home</title>
+        <title>Muhammad Munaf | UI/UX Designer & Developer</title>
+        <meta
+            name="description"
+            content="Hi, I'm a UX designer & developer experinced in creating unreal and user-friendly experiences on mobile and web."
+        />
     </head>
     <body>
         <nav id="desktop">
@@ -375,7 +379,7 @@
                     data-aos-delay="250"
                 >
                     <p class="smallCaps">Connect</p>
-                    <p class="contactInfoContent">info@gmail.com</p>
+                    <p class="contactInfoContent">munafhassan23@gmail.com</p>
                     <p class="contactInfoContent">+92 315 7600100</p>
                     <!-- <div class="whatsappContact">
                         <img src="Images/Blank.jpg" alt="QR code" />
@@ -410,7 +414,9 @@
                             cols="10"
                             rows="10"
                         ></textarea>
-                        <button type="submit">Send</button>
+                        <button type="submit" onsubmit="return false">
+                            Send
+                        </button>
                     </form>
                 </div>
             </div>
