--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -394,7 +394,7 @@
             <div class="contactOuterContainer">
                 <div class="contactInfo">
                     <p class="smallCaps">Connect</p>
-                    <p class="contactInfoContent">info@gmail.com</p>
+                    <p class="contactInfoContent">munafhassan23@gmail.com</p>
                     <p class="contactInfoContent">+92 315 7600100</p>
                     <!-- <div class="whatsappContact">
                         <img src="Images/Blank.jpg" alt="QR code" />
