--- a/mmunaf/services.html
+++ b/mmunaf/services.html
@@ -226,7 +226,7 @@
                     data-aos-delay="250"
                 >
                     <p class="smallCaps">Connect</p>
-                    <p class="contactInfoContent">info@gmail.com</p>
+                    <p class="contactInfoContent">munafhassan23@gmail.com</p>
                     <p class="contactInfoContent">+92 315 7600100</p>
                     <!-- <div class="whatsappContact">
                         <img src="Images/Blank.jpg" alt="QR code" />
